welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not found: value getHauteurMonde
  for(i<-0 to getHauteurMonde()-1) {
              ^Array1:8: error: not found: value getHauteurMonde
  for(i<-1 to getHauteurMonde()-1) {
              ^Array1:10: error: not found: value getHauteurMonde
    for(i<-0 to getHauteurMonde()-1) {
                ^