welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var T= new Array[Color](6)
  for(i<-0 to getHauteurMonde()-1) {
    T(i)=getCouleurSol()
    avance()
  }
  for(i<-1 to getHauteurMonde()-1) {
    gauche(); avance(); droite(); avance()
    for(i<-0 to getHauteurMonde()-1) {
      setCouleurBrosse(T(i))
      baisseBrosse()
      leveBrosse()
      avance()
    }
  }
  
}